# gpgsync

./: .gitignore  BUILD.md  CHANGELOG.md  MANIFEST.in  Makefile  Pipfile  README.md  circle.yml  pgpsync.py  pyproject.toml  requirements.txt  setup.py  stdeb.cfg
.circleci/: config.yml
dev_scripts/: gpgsync
example-keylist/: README.md  keylist.json.asc
fingerprints/: README.md  fingerprints.txt  fingerprints.txt.asc  fingerprints.txt.sig
gpgsync/: __init__.py  buttons.py  cli.py  common.py  edit_endpoint.py  endpoint.py  endpoint_dialog.py  endpoint_list.py  endpoint_selection.py  gnupg.py  gpgsync.py  keylist.py  keylist_dialog.py  keylist_list.py  loading_animation.py  message_queues.py  settings.py  settings_dialog.py  settings_window.py  status_bar.py  systray.py  version_migrations.py
install/: Info.plist  build_app.sh  build_deb.sh  build_exe.bat  build_mac.py  build_osx.sh  build_pkg.sh  build_rpm.sh  gpgsync.desktop  gpgsync.icns  gpgsync.nsi  pgpsync-osx.py  pgpsync.desktop  pgpsync.icns  pyinstaller-osx.spec  pyinstaller.spec  requirements-circleci.txt  requirements-macos.txt  requirements-package.txt  requirements-tests.txt  requirements-windows.txt  requirements.txt
logo/: error.xcf  error_bw.xcf  logo-bw.xcf  logo.xcf  syncing.xcf  syncing_bw.xcf
pgpsync/: __init__.py  buttons.py  common.py  edit_endpoint.py  endpoint.py  endpoint_selection.py  gnupg.py  loading_animation.py  pgpsync.py  settings.py  settings_window.py  status_bar.py  systray.py
share/: org.firstlook.gpgsync.plist  org.firstlook.pgpsync.plist  sks-keyservers.netCA.pem.asc  (+1 more)
(+77 files in other folders)
