[tool.poetry]
name = "gpgsync"
version = "0.3.6"
description = "GPG Sync is designed to let users always have up-to-date public keys for other members of their organization"
authors = ["Micah Lee <micah.lee@firstlook.media>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
PySide2 = "^5.15.2"
PySocks = "^1.7.1"
python-dateutil = "^2.8.1"
requests = "^2.25.1"
pywin32 = {version = "^300", platform = "win32"}
pyobjc-core = {version = "7.0.1", platform = "darwin"}
pyobjc-framework-cocoa = {version = "7.0.1", platform = "darwin"}
pyobjc-framework-quartz = {version = "7.0.1", platform = "darwin"}
packaging = "^20.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
